fix related posts

--- a/src/content/posts/careful-with-context-composition/index.mdx
+++ b/src/content/posts/careful-with-context-composition/index.mdx
@@ -6,7 +6,7 @@ subtitle: null
 description: 'Be careful with how you compose your UI when using Context. You might be making a common mistake causing extra rerenders.'
 excerpt: "Recently, I helped a small team fix a performance issue involving React Context. It was a fairly simple fix that I want to share with you. I'm going to set up the problem, show you the small change we needed to make, and share a small library I made to help you out in the future."
 tags: ['React']
-relatedPostsSlugs: ['how-to-use-react-context-effectively']
+relatedPostsSlugs: ['how-to-use-react-context-effectively', 'jsx-was-a-mistake']
 ---
 
 import Example1 from './_Example1'
