--- a/src/content/posts/cyclomatic-complexity/index.mdx
+++ b/src/content/posts/cyclomatic-complexity/index.mdx
@@ -5,7 +5,11 @@ title: 'Managing Cyclomatic Complexity'
 subtitle: ''
 description: 'Understanding cyclomatic complexity and how to manage it can level you up as a programmer'
 tags: ['Data Structures and Algorithms', 'Computer Science']
-relatedPostsSlugs: ['when-elses-make-your-code-worse']
+relatedPostsSlugs:
+  [
+    'when-elses-make-your-code-worse',
+    'patterns-for-functions-with-conditionals',
+  ]
 relevantCourseNickname: 'dsa'
 ---
 
