--- a/src/content/posts/enumerate-dont-booleanate/index.mdx
+++ b/src/content/posts/enumerate-dont-booleanate/index.mdx
@@ -12,6 +12,7 @@ relatedPostsSlugs:
     'can-a-state-machine-be-a-string',
     'guidelines-for-state-machines-and-xstate',
     'discriminated-unions-and-destructuring-in-typescript',
+    'why-use-use-reducer',
   ]
 ---
 
