--- a/src/content/posts/generator-functions/index.mdx
+++ b/src/content/posts/generator-functions/index.mdx
@@ -6,7 +6,7 @@ subtitle: null
 description: 'In this interactive article, Kyle Shevlin explains a seldom used feature of JavaScript: generator functions. Learn the basics of how they work and how they might be useful.'
 excerpt: null
 tags: ['JavaScript']
-relatedPostsSlugs: []
+relatedPostsSlugs: ['simulation-pattern']
 ---
 
 import Collatz from './_Collatz'
