--- a/src/content/posts/just-enough-fp-composition/index.mdx
+++ b/src/content/posts/just-enough-fp-composition/index.mdx
@@ -13,6 +13,7 @@ relatedPostsSlugs:
     'just-enough-fp-partial-application',
     'just-enough-fp-argument-order',
     'just-enough-fp-pointfree',
+    'two-types-of-composition',
   ]
 relevantCourseNickname: 'fp'
 ---
