--- a/src/content/posts/just-enough-fp-pointfree/index.mdx
+++ b/src/content/posts/just-enough-fp-pointfree/index.mdx
@@ -14,6 +14,7 @@ relatedPostsSlugs:
     'just-enough-fp-partial-application',
     'just-enough-fp-argument-order',
     'just-enough-fp-composition',
+    'conways-game-of-life',
   ]
 relevantCourseNickname: 'fp'
 ---
