--- a/src/content/posts/use-encapsulation/index.mdx
+++ b/src/content/posts/use-encapsulation/index.mdx
@@ -7,7 +7,11 @@ description: 'Improve the quality of your codebase with encapsulation and custom
 excerpt: "If you're using React Hooks, I want to show you a pattern for using them that I think will improve the legibility and organization of your codebase. Let's apply encapsulation to the use of React Hooks."
 tags: ['JavaScript', 'React', 'React Hooks', 'Computer Science']
 relatedPostsSlugs:
-  ['encapsulation', 'prefer-function-updaters-in-state-setters']
+  [
+    'encapsulation',
+    'prefer-function-updaters-in-state-setters',
+    'why-use-use-reducer',
+  ]
 ---
 
 import RelatedTweet from './_RelatedTweet'
