--- a/src/content/posts/use-state-vs-use-ref/index.mdx
+++ b/src/content/posts/use-state-vs-use-ref/index.mdx
@@ -6,7 +6,7 @@ subtitle: null
 description: "People are often confused by `useRef`. Let's try and fix that confusion by comparing it with `useState`."
 excerpt: "People are often confused by <code>useRef</code>. Let's try and fix that confusion by comparing it with <code>useState</code>."
 tags: ['React', 'JavaScript']
-relatedPostsSlugs: []
+relatedPostsSlugs: ['why-use-use-reducer']
 ---
 
 import BackgroundCounter from './_BackgroundCounter'
