--- a/src/content/posts/what-is-a-closure/index.mdx
+++ b/src/content/posts/what-is-a-closure/index.mdx
@@ -6,7 +6,7 @@ subtitle: null
 description: 'JavaScript closures are confusing for some, but they do not have to be. Learn what a closure is and why they are a powerful tool to have in your programming repertoire.'
 excerpt: 'JavaScript closures are confusing for some, but they do not have to be. Learn what a closure is and why they are a powerful tool to have in your programming repertoire.'
 tags: ['JavaScript', 'Computer Science']
-relatedPostsSlugs: []
+relatedPostsSlugs: ['simulation-pattern', 'what-is-a-factory-function']
 ---
 
 In JavaScript, and some other languages, too, there is the concept of a "closure". This concept can be confusing at first, but once understood, can become a useful tool in your repertoire. I want to help you discover how useful it can be.
