--- a/src/content/posts/what-is-a-factory-function/index.mdx
+++ b/src/content/posts/what-is-a-factory-function/index.mdx
@@ -6,7 +6,7 @@ subtitle: null
 description: 'Factory functions help us quickly create objects. They make use of closures to have private values and functions, all while avoiding the `this` keyword. Learn how to use them in this article.'
 excerpt: 'Factory functions help us quickly create objects. They make use of closures to have private values and functions, all while avoiding the <code>this</code> keyword. Learn how to use them in this article.'
 tags: ['JavaScript', 'Computer Science']
-relatedPostsSlugs: ['what-is-a-closure']
+relatedPostsSlugs: ['what-is-a-closure', 'conways-game-of-life']
 ---
 
 Building upon [closures](/what-is-a-closure), I want to teach you about "factory functions", too. Factory functions often use closures, so it makes sense to learn them together. So if you don't know what a closure is or need a refresher, I encourage you to read that blog post first.
