add post on the react native curved bottom bar

--- a/src/content/posts/parametric-design/index.mdx
+++ b/src/content/posts/parametric-design/index.mdx
@@ -6,7 +6,7 @@ subtitle: null
 description: 'Parametric design is the process of using adjustable parameters to modify and influence a design. Add it to your box of tools.'
 excerpt: 'Parametric design is the process of using adjustable parameters to modify and influence a design. Add it to your box of tools.'
 tags: ['JavaScript', 'React']
-relatedPostsSlugs: []
+relatedPostsSlugs: ['react-native-curved-bottom-bar-with-handwritten-svg']
 ---
 
 import ColorPicker from './_ColorPicker'
