improve explanation further

--- a/src/content/posts/align-items-center-vs-text-align-center/index.mdx
+++ b/src/content/posts/align-items-center-vs-text-align-center/index.mdx
@@ -49,7 +49,7 @@ Did you spot it? What about now?
   </div>
 </div>
 
-You see the difference? The left example is a `flex` `column` with `align-items` set to `center` and the right example has the `text-align` set to `center`. This is a small thing that's easy to overlook, but can have you scratching your head later trying to get things to align the way you'd like.
+You see the difference? Both examples are Flex columns. The first example has set `align-items` to `center`, while the second example has kept the default `align-items` of `stretch`, but used `text-align: center` on the text instead. This is a small detail that's easy to overlook, but can have you scratching your head later trying to get things to align the way you'd like.
 
 When the text is short, it can seem like which CSS you use doesn't matter, but if we were to add a background to the text in our first two examples, we'd notice the difference right away.
 
