adds prefer composition post

--- a/src/content/posts/cyclomatic-complexity/index.mdx
+++ b/src/content/posts/cyclomatic-complexity/index.mdx
@@ -9,6 +9,7 @@ relatedPostsSlugs:
   [
     'when-elses-make-your-code-worse',
     'patterns-for-functions-with-conditionals',
+    'prefer-multiple-compositions',
   ]
 relevantCourseNickname: 'dsa'
 ---
