--- a/src/content/posts/patterns-for-functions-with-conditionals/index.mdx
+++ b/src/content/posts/patterns-for-functions-with-conditionals/index.mdx
@@ -6,7 +6,8 @@ subtitle: null
 description: "Let's explore two common function patterns for managing the complexity of conditional code."
 excerpt: "Let's explore two common function patterns for managing the complexity of conditional code."
 tags: ['JavaScript', 'Software Engineering', 'Refactoring']
-relatedPostsSlugs: ['managing-cyclomatic-complexity']
+relatedPostsSlugs:
+  ['managing-cyclomatic-complexity', 'prefer-multiple-compositions']
 ---
 
 Recently, a [tweet about wrapping `for` loops into functions](https://twitter.com/joelnet/status/1523710667424894977?s=20&t=51CDtjmt9M6z7GwvJtXvzA) <Marker content="And my consequent reply to it." /> inspired me to write a (hopefully) brief blog post on two common function patterns I use to handle conditional logic. Knowing how to write each pattern and knowing when to one or the other will help you wrangle complexity in your programs.
