--- a/src/content/posts/just-enough-fp-composition/index.mdx
+++ b/src/content/posts/just-enough-fp-composition/index.mdx
@@ -14,6 +14,7 @@ relatedPostsSlugs:
     'just-enough-fp-argument-order',
     'just-enough-fp-pointfree',
     'two-types-of-composition',
+    'prefer-multiple-compositions',
   ]
 relevantCourseNickname: 'fp'
 ---
