--- a/src/content/posts/design-system-retrospective/index.mdx
+++ b/src/content/posts/design-system-retrospective/index.mdx
@@ -104,7 +104,7 @@ On the other hand, children of a Flex `row` parent behave like `inline` or `inli
 
 The designers were a bit stunned that they could have both buttons _just by changing the context they were rendered in_.
 
-But this was a challenge for devs. They we're quick to grasp that the fastest way to have an `inline-block` button was to wrap it in a `Row`. Even _after_ I did multiple demos and wrote examples in our documentation. It never became intuitive for them.
+But this was a challenge for devs. They were slow to understand that the way to have an `inline-block`-like button was to wrap it in a `Row`. Even _after_ I did multiple demos and wrote examples in our documentation. It never became intuitive for them.
 
 I'd have people ask me, "What if I want multiple buttons of the same width next to each other?"
 
