--- a/src/content/posts/responsive-design-and-composition/index.mdx
+++ b/src/content/posts/responsive-design-and-composition/index.mdx
@@ -63,9 +63,9 @@ So yeah... **do you want to maintain this?**
 
 Yeah, I didn't think so.
 
-**Now look**, I understand why this happens. It's really easy to empathize with the challenge the original dev or devs faced in making this work. They were clever enough to come up with a grid layout that could accommodate their needs.
+**Now look**, I understand why this happens. It's really easy to empathize with the challenge the original dev or devs faced in making this work. Let's give them some credit. They were clever enough to come up with a grid layout that could accommodate their needs.
 
-That said, they made this way harder than it has to be. But how could they have know there is an easier way hidden just below the surface? There are two clues here that make it clear what we should do instead.
+That said, cleverness is not the answer. <Marker content="It rarely is." /> They made this way harder than it has to be. But how could they have known there is an easier way hidden just below the surface? There are two clues here that make it clear what we should do instead.
 
 First, the layout of the elements changes. It would be one thing if all their spatial relationships remained the same. The `name` stays above the `image`. The `description` always has `name` and `role` beneath it. But it doesn't. The layout changes. I mean, they went so far as to have a `br` element that is removed from the page! You know were up to something weird if that's happening. All of this should be a signal that maybe we want to solve this with [multiple compositions](/prefer-multiple-compositions) instead.
 
