--- a/src/content/posts/from-pastor-to-programmer/index.mdx
+++ b/src/content/posts/from-pastor-to-programmer/index.mdx
@@ -10,7 +10,7 @@ description: 'In this article, Kyle Shevlin explains how he made the career chan
 
 I am often asked to share the story of how I went from being a Christian pastor to a software engineer. Now that I've started [Second Career Devs](https://secondcareerdevs.com), I am being asked this question so often that I thought it wise to write it down and answer it once and for all.
 
-## Where I Believe the Story Begins
+### Where I Believe the Story Begins
 
 Unlike many people who eventually find their way to programming, I never did any programming as a kid. I had a computer, a Commodore 64, but I mostly used it to play games and write stories. In other words, I don't think anyone suspected that I would wind up where I have.
 
