adjust code snippet

--- a/src/content/posts/prefer-noun-adjective-naming/index.mdx
+++ b/src/content/posts/prefer-noun-adjective-naming/index.mdx
@@ -38,12 +38,12 @@ Also, try searching for them. What if you forget that it's `Ended` and not `Comp
 But if you flip them and go noun-adjective, `StreamCreated`, `StreamEnded`, and `StreamLive`, all your components are right next to each other in your directory.
 
 ```
-- CurrentUser.tsx
-- FullScreen.tsx
-- GoLiveButton.tsx
+- ButtonGoLive.tsx
+- ScreenFull.tsx
 - StreamCreated.tsx
 - StreamEnded.tsx
 - StreamLive.tsx
+- UserCurrent.tsx
 // etc...
 ```
 
